2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/getdate.y: abbrev is a bool.
	* libmisc/getdate.y: Avoid implicit conversion of pointers / chars /
	integers to booleans.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Fix prototypes according to earlier changes
	(usage of the bool type).
	* lib/prototypes.h: Add the arguments' name to the prototypes.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.h: Add protection against multiple inclusions.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/pwio.h: Add protection against multiple inclusions.
	* lib/pwio.c: The changed, isopen, locked, and readonly fields
	of the db are booleans.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/shadowio.h, lib/shadowio.c: spw_file_present returns a bool.
	* lib/shadowio.h: Add protection against multiple inclusions.
	* lib/shadowio.c: The changed, isopen, locked, and readonly fields
	of the db are booleans.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/sgroupio.c: Avoid assignments in comparisons.
	* lib/sgroupio.c: Add brackets.
	* lib/sgroupio.c: Avoid implicit conversion of pointers / integers
	to booleans.
	* lib/sgroupio.c: The changed, isopen, locked, and readonly fields
	of the db are booleans.
	* lib/sgroupio.h, lib/sgroupio.c: sgr_file_present returns a bool.
	* lib/sgroupio.h: Add protection against multiple inclusions.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/gshadow.c: nis_used and nis_bound are booleans.
	* lib/gshadow.c: Avoid implicit conversion of pointers / integers
	to booleans.
	* lib/gshadow.c: Avoid assignments in comparisons.
	* lib/gshadow.c: Add brackets.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c: The changed, isopen, locked, and readonly fields
	of the db are booleans.